--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
 
     <b><p class="fadownloads" style="text-align:center"> Cyber Core VPN<br>Official Version</p></b>
 
-      <a href="https://github.com/JepongDevzDoubleJ/Files-Upload/raw/main/Cyber%20Core%20VPN.7z" class="download-btn"> <i class="fas fa-download"></i> Download<i class="fas fa-download"></i></a>
+      <a href="#" class="download-btn"> <i class="fas fa-download"></i> Download<i class="fas fa-download"></i></a>
 
       <div class="countdown"></div>
 
