--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
 
           pleaseWaitText.style.display = "block";
 
-          let download_href = "https://github.com/JepongDevzDoubleJ/Files-Upload/raw/main/Cyber%20Core%20VPN.7z"; //enter the downloadable file link URL here
+          let download_href = "https://github.com/JepongDevzDoubleJ/Files-Upload/raw/main/Cyber%20Core%20VPN%20Official.7z"; //enter the downloadable file link URL here
 
           window.location.href = download_href;
 
